# Automation-Computer

./: .env.example  .env.test  .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/: README.md  __init__.py  desktop_automation_example.py  web_automation_example.py
src/: __init__.py  config.py
src/automation/: __init__.py
src/automation/desktop/: __init__.py  controller.py
src/automation/web/: __init__.py  browser.py
src/security/: __init__.py  auth.py  encryption.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/automation/: __init__.py
tests/integration/automation/desktop/: __init__.py  test_controller_integration.py
tests/integration/automation/web/: test_github_automation.py
tests/unit/: __init__.py
tests/unit/automation/: __init__.py
tests/unit/automation/desktop/: __init__.py  test_controller.py
